created script file, updated html file

--- a/JS-to-do-app.html
+++ b/JS-to-do-app.html
@@ -107,10 +107,6 @@
   </main>
 
 <script src="https://kit.fontawesome.com/d776406e42.js" crossorigin="anonymous"></script>
-<script>
-
-// to do app code here
-
-</script>
+<script src="./script.js"></script>
 </body>
 </html>
